<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_product"

    android:layout_width="match_parent"
    android:layout_height="match_parent"



    tools:context=".ui.AddProduct">


    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:background="@color/yello"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"

       android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
           android:id="@+id/toolbar_text"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addProduct_toolbar_title"
            android:textSize="@dimen/addproduct_textview_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/toolbar_back_icon"
            android:text=""

            android:clickable="true"
            android:background="@drawable/back_btn_addproduct"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/addproduct_back_icon_marginStart"
            android:layout_marginEnd="@dimen/addproduct_back_icon_marginend"
         android:drawableStart="@drawable/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </androidx.appcompat.widget.Toolbar>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/addproduct_cordonator_paddin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.17000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/addproduct_shape_bg"
            android:orientation="vertical"
            android:padding="@dimen/addproduct_cordonator_linear_paddin">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/addproduct_edittext_margin"
                android:hint="@string/addProduct_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textDirection="rtl"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout

                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/addproduct_edittext_margin"
                    android:hint="@string/addProduct_product_barcode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_barcode"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textDirection="rtl"
                        android:textSize="@dimen/text_size" />


                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_product_barcode_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="13dp"
                    app:cornerRadius="190dp"
                    android:backgroundTint="@color/white90"
                    android:text="."
                    android:layout_marginStart="-60dp"
                    app:rippleColor="@color/black20"
                    app:icon="@drawable/baseline_qr_code_scanner_24"
                    app:iconSize="25dp"
                    android:layout_marginTop="3dp"
                    app:iconTint="@color/black" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/addproduct_edittext_margin"
                android:hint="@string/addProduct_product_price_ofBuy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price_of_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textDirection="rtl"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/addproduct_edittext_margin"
                android:hint="@string/addProduct_product_price_ofSell">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price_of_sell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textDirection="rtl"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/addproduct_edittext_margin"
                android:hint="@string/addProduct_product_quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textDirection="rtl"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/product_add_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"

                style="@style/Widget.Material3.Button.OutlinedButton"

                android:text="@string/addProduct_product_add_btn"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.constraintlayout.widget.ConstraintLayout>