<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddClientActivity">


    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yello"
        android:gravity="center"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sell_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/addClints_toolbar_title"
            android:textSize="@dimen/addproduct_textview_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addclient_toolbar_back_icon"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/addproduct_back_icon_marginStart"
            android:layout_marginEnd="@dimen/addproduct_back_icon_marginend"
            android:background="@drawable/back_btn_addproduct"
            android:clickable="true"
            android:drawableStart="@drawable/back_icon"
            android:text="."
            android:textSize="2dp"/>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addClints_name"
        app:counterMaxLength="25"

        app:counterEnabled="true"
        android:layout_margin="@dimen/addproduct_edittext_margin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="25"
            android:id="@+id/add_client_client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textDirection="rtl"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        app:counterMaxLength="10"
        app:counterEnabled="true"
        android:layout_height="wrap_content"

        android:hint="@string/addClints_phone"
        android:layout_margin="@dimen/addproduct_edittext_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="10"
            android:id="@+id/add_client_client_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/addproduct_edittext_margin"
        app:counterMaxLength="35"
        app:counterEnabled="true"
        android:hint="@string/addClints_sotre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="35"
            android:id="@+id/add_client_client_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/add_client_client_add_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/addproduct_button"
        android:foreground="?selectableItemBackground"
        android:text="@string/addClints_add_btn"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="615dp" />

</androidx.constraintlayout.widget.ConstraintLayout>