<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ClientActivity">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yello"
        android:gravity="center"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sell_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/clients_toolbar_title"
            android:textSize="@dimen/addproduct_textview_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/client_toolbar_back_icon"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/addproduct_back_icon_marginStart"
            android:layout_marginEnd="@dimen/addproduct_back_icon_marginend"
            android:background="@drawable/back_btn_addproduct"
            android:clickable="true"
            android:drawableStart="@drawable/back_icon"
            android:text="" />


    </androidx.appcompat.widget.Toolbar>

    <SearchView
        android:queryHint="@string/clients_search_client"
        android:textDirection="anyRtl"
        android:background="@drawable/client_shape_searchview"
        android:layout_margin="@dimen/addproduct_edittext_margin"
        android:id="@+id/client_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/addproduct_shape_bg"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_search">

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:background="@drawable/shape_sell_linrear_informations"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/sell_linear_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center"
                    android:text="@string/clients_name" />

                <TextView
                    android:id="@+id/sell_product_linear_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="95dp"
                    android:layout_toStartOf="@id/sell_product_linear_total"
                    android:gravity="center"
                    android:text="@string/clients_phone" />

                <TextView
                    android:id="@+id/sell_product_linear_total"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="@dimen/addproduct_edittext_margin"
                    android:gravity="center"
                    android:text="اسم المتجر" />

            </RelativeLayout>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/stock_recyclerview_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fab_add_client"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="-28dp"
        android:contentDescription="@string/add_clint"
        android:src="@drawable/add_client"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>